@@ -170,7 +170,8 @@ the cache file.")
        (set 'w3m-modeline-favicon
 	    (list ""
 		  'w3m-space-before-favicon
-		  (propertize "  " 'display w3m-favicon-image))))))
+		  (propertize "  " 'display w3m-favicon-image)
+		  (propertize " " 'display '(space :relative-width 0.5)))))))
 
 (defun w3m-favicon-setup (url)
   "Set up the favicon data in the current buffer.  The buffer-local
